fix: layout spacing issue with main menu dropdown (IE11)
close #46

--- a/sites/all/themes/heybabies/sass/_main.scss
+++ b/sites/all/themes/heybabies/sass/_main.scss
@@ -249,6 +249,7 @@ tbody
             {
                 float: left;
                 width: 22%;
+                height: auto;
                 padding: 10px 1.5%;
                 margin: 0;
                 
